--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,5 +1,3 @@
-# Based on:
-# https://github.com/goreleaser/example-slsa-provenance/commit/b045ad49ff6d26c3e332f4438698ead58e072be2
 name: Release Plugins
 
 on:
@@ -7,6 +5,8 @@ on:
     tags:
       # run on release tags like: 'Y.M.D-release'
       - "*-release"
+    paths:
+      - '**.go'
 
   workflow_dispatch:
 
@@ -18,7 +18,7 @@ jobs:
     permissions:
       contents: write
       attestations: write
-     # id-token: write
+
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
