--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,8 +5,16 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '**.go'
+      - '**.py'
+      - '**.tf'
 
   pull_request:
+    paths:
+      - '**.go'
+      - '**.py'
+      - '**.tf'
 
   workflow_dispatch:
 
