chore(goreleaser): exclude chore/test commits from release

--- a/goreleaser.yaml
+++ b/goreleaser.yaml
@@ -82,8 +82,8 @@ changelog:
   sort: asc
   filters:
     exclude:
-      - '^test:'
-      - '^chore:'
+      - '^test(\([[:word:]]+\))?:'
+      - '^chore(\([[:word:]]+\))?:'
   groups:
     - title: Features
       regexp: '^.*?feat(\([[:word:]]+\))??!?:.+$'
