--- a/goreleaser.yaml
+++ b/goreleaser.yaml
@@ -99,12 +99,31 @@ announce:
   slack:
     enabled: true
 
-    message_template: |
-      # The `{{.Tag}}` is out!
-      {{ .ReleaseURL }}
-      ----
-      ## Plugin versions:
-      GatePlane Policy Gate: `{{ .Env.VERSION_policy_gate }}`
-      ----
-      # Release Notes
-      {{ .ReleaseNotes }}
+    blocks:
+      - type: header
+        text:
+          type: plain_text
+          text: "The {{ .Tag }} is out \U0001F680⭐"
+          emoji: true
+      - type: section
+        text:
+          type: mrkdwn
+          text: '{{ .ReleaseURL }}'
+      - type: divider
+      - type: section
+        text:
+          type: mrkdwn
+          text: |-
+            *Plugin versions:*
+             Policy Gate: `{{ .Env.VERSION_policy_gate }}`
+             Okta Group Gate: `{{ .Env.VERSION_okta_group_gate }}`
+      - type: divider
+      - type: header
+        text:
+          type: plain_text
+          text: "Release Notes \U0001F4DD"
+          emoji: true
+      - type: section
+        text:
+          type: mrkdwn
+          text: '{{ .ReleaseNotes }}'
