--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,17 +26,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - name: Set SemVer Plugin Versions
-        run: |
-          echo 'VERSION_policy_gate=v0.0.0-snap' >> "$GITHUB_ENV"
-          echo 'VERSION_mock=v0.0.0-snap' >> "$GITHUB_ENV"
-
       - name: Run GoReleaser
         id: goreleaser
         uses: goreleaser/goreleaser-action@9c156ee8a17a598857849441385a2041ef570552 # v6.3.0
         with:
           version: '~> v2'
-          args: build --clean --single-target --snapshot
+          install-only: true
+
+      - name: Build Plugin Binaries
+        run: make build-plugin
         env:
           # Generates the 'mock' plugin
           RELEASE: false
