--- a/.github/workflows/gosec.yaml
+++ b/.github/workflows/gosec.yaml
@@ -13,9 +13,13 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '**.go'
   pull_request:
     branches:
       - main
+    paths:
+      - '**.go'
   workflow_dispatch:
 
 permissions:
